--- a/index.html
+++ b/index.html
@@ -3300,7 +3300,7 @@ Kullanıcı 13+ hafta olan hastaları manuel olarak arşivler.
     }
 
     // --- Manuel Eşleştirme Paneli Fonksiyonları ---
-    const MANUEL_ESLESTIRME_KEY = 'lipedem_manuel_eslestirmeler';
+    const MANUEL_ESLESTIRME_KEY = 'manuel_eslestirmeler';
     let manuelEslestirmeler = {};
 
     // Global karakter düzeltme fonksiyonu
