--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <script>
     // GitHub API Konfigürasyonu (GLOBAL)
     const githubOwner = 'mustafasacar35';
-    const githubRepo = 'nutrition-data';
+    const githubRepo = 'nutrition-planner';
     
     // jsPDF font encoding düzeltmesi
     window.fixTurkishChars = function(text) {
