--- a/index.html
+++ b/index.html
@@ -15764,6 +15764,8 @@ ${mesajlar.join('\n')}
                 parsedData.promptlar = [];
                 // This would need more complex parsing for actual prompt objects
               }
+            } else {
+              parsedData.promptlar = [];
             }
             
             console.log('🔍 DEBUG: Manual parsing completed');
